--- a/index.html
+++ b/index.html
@@ -1,5 +1,65 @@
+<!DOCTYPE html>
 <html>
+<head>
+  <title></title>
+  <style type="text/css">
+    body{
+      height: 2000px;
+      margin: 0px;
+    }
+    .bar{
+      width: 600px;
+      height: 50px;
+      margin: auto;
+      background-color: #333333;
+      position: relative;
+    }
+    .outerbar{
+      width: 100%;
+      height: 50px;
+      margin: 0;
+      padding: 0;
+      position: relative;
+      text-align: center;
+    }
+    .bar-anchor{
+      width: 600px;
+      height: 0px;
+      margin: auto;
+    }
+    .placeholder{
+      height: 200px;
+      width: 100%;
+    }
+  </style>
+</head>
 <body>
-<h1 style="text-align: center;">Hello, sticky-headers!</h1>
+  <div class="container">
+    <div class="placeholder" style="background-color:#8888ff"></div>
+    <div class="outerbar">
+      <div class="bar"></div>
+    </div>
+    <div class="placeholder" style="background-color:#88cccc"></div>
+    <div class="outerbar">
+      <div class="bar" style="background-color:#999999"></div>
+    </div>
+    <div class="placeholder" style="background-color:#88ff88"></div>
+    <div class="outerbar">
+      <div class="bar" style="background-color:#dddddd"></div>
+    </div>
+    <div class="bar-anchor" id="bar-anchor"></div>
+  </div>
+
+  <a href="#">
+    <img style="position: absolute; top: 0; right: 0; border: 0;" src="./rtlogo.png" alt="Fork me on GitHub" data-canonical-src="./rtlogo.png"/>
+  </a>
+  <script type="text/javascript" src="./index.js"></script>
+  <script type="text/javascript">
+  var barAnchor=document.getElementById('bar-anchor')
+  var bars=document.querySelectorAll('.bar')
+  Array.prototype.forEach.call(bars, function(bar) {
+    sticky(bar, barAnchor, 0);
+  });
+  </script>
 </body>
 </html>
